# ShopperInsights

./: .gitignore  .gitlab-ci.yml  Dockerfile.api  Dockerfile.web  README.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
api_lambda/: lambda_entrypoint.py  mock_data.yaml  utils.py
backend/: lambda_entrypoint.py  mock_data.py  pyproject.toml
backend/pipelines/: image_processing.py  ocr.py
backend/utils/: llm.py  utils.py
iac/: locals.tf  providers.tf  variables.tf
image_processing/: file_conversion.py
pages/: 1_Upload.py  2_History.py
shopper-insights-app/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
shopper-insights-app/src/app/(auth)/: layout.tsx
shopper-insights-app/src/app/(main)/: layout.tsx  page.tsx
shopper-insights-app/src/components/budget/: .keep  BudgetOverview.tsx  SetBudgetForm.tsx
shopper-insights-app/src/components/charts/: .keep  CategoryDonut.tsx  SpendingChart.tsx
shopper-insights-app/src/components/layout/: BottomNavbar.tsx  Header.tsx  Logo.tsx  Navbar.tsx  NotificationToast.tsx  ProfileButton.tsx  ProfileDropdown.tsx  Sidebar.tsx
shopper-insights-app/src/components/receipts/: .keep  ClientActions.tsx  ReceiptList.tsx  ReceiptProcessingList.tsx  ReceiptStatusCard.tsx  ReceiptUploadForm.tsx  RecentReceipts.tsx  TrendsChart.tsx
shopper-insights-app/src/components/shared/: .keep  Loader.tsx
shopper-insights-app/src/components/upload/: Uploader.tsx
shopper-insights-app/src/hooks/: useAuth.ts  useBudget.ts  useReceipts.ts  useStore.ts
shopper-insights-app/src/lib/: api.ts  llm.ts  validation.ts
shopper-insights-app/src/store/: .keep  authStore.ts  budgetStore.ts  receiptStore.ts
shopper-insights-app/src/styles/: globals.css  theme.css
shopper-insights-app/src/types/: .keep  index.d.ts
(+21 files in other folders)
